--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>호텔 정보 입력창 (탭 버전)</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <div class="editor-container">
         <div class="editor-controls">
             <h2>호텔 정보 편집기</h2>
             <div class="control-buttons flex space-x-2">
+                <button id="savePreviewImageBtn" class="btn-image-save"><i class="fas fa-camera"></i>이미지로 저장</button>
                 <button id="previewHotelBtn" class="btn-preview"><i class="fas fa-eye"></i>미리보기</button>
                 <button id="saveHotelHtmlBtn" class="btn-save"><i class="fas fa-file-code"></i>전체 HTML 저장</button>
                 <button id="loadHotelHtmlBtn" class="btn-load-html"><i class="fas fa-upload"></i>HTML 불러오기</button>
@@ -57,7 +59,9 @@
 
     <input type="file" id="hotelHtmlLoadInput" accept=".html" style="display: none;">
     <input type="file" id="hotelExcelLoadInput" accept=".xlsx, .csv" style="display: none;">
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script src="script.js"></script> </body>
+    <script src="script.js"></script>
+</body>
 </html>
