--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>호텔 정보 입력창 (탭 버전)</title>
+    <title>한원희연구소_호텔카드 메이커</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -11,14 +11,15 @@
 <body>
     <div class="editor-container">
         <div class="editor-controls">
-            <h2>호텔 정보 편집기</h2>
+            <h2><b>호텔카드 메이커</b></h2>
             <div class="control-buttons flex flex-wrap gap-2 justify-end">
-                <button id="savePreviewHtmlBtn" class="btn-save-preview-html"><i class="fas fa-file-alt"></i>호텔안내 HTML 저장</button>
-                <button id="savePreviewImageBtn" class="btn-image-save"><i class="fas fa-camera"></i>이미지로 저장</button>
+                <button id="copyHtmlBtn" class="btn-copy-html"><i class="fas fa-copy"></i>코드 복사</button>
+                <button id="savePreviewHtmlBtn" class="btn-save-preview-html"><i class="fas fa-file-alt"></i>HTML 저장</button>
                 <button id="previewHotelBtn" class="btn-preview"><i class="fas fa-eye"></i>미리보기</button>
-                <button id="saveHotelHtmlBtn" class="btn-save"><i class="fas fa-database"></i>호텔안내 데이터 저장</button>
+                <p>
+                <button id="saveHotelHtmlBtn" class="btn-save"><i class="fas fa-database"></i>데이터 저장</button>
                 <button id="loadHotelHtmlBtn" class="btn-load-html"><i class="fas fa-upload"></i>데이터 불러오기</button>
-                <button id="loadHotelExcelBtn" class="btn-load-excel" title="현재 선택된 호텔 정보를 엑셀로 덮어씁니다."><i class="fas fa-file-excel"></i>선택 호텔 엑셀 적용</button>
+                </p>
             </div>
         </div>
 
@@ -41,8 +42,8 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
                     <div class="form-field">
-                        <input type="url" id="hotelMapLink" placeholder=" ">
-                        <label for="hotelMapLink">지도 링크</label>
+                        <input type="url" id="hotelWebsite" placeholder=" ">
+                        <label for="hotelWebsite">호텔 웹사이트</label>
                     </div>
                     <div class="form-field">
                         <input type="url" id="hotelImage" placeholder=" ">
@@ -59,10 +60,7 @@
     </div>
 
     <input type="file" id="hotelHtmlLoadInput" accept=".html" style="display: none;">
-    <input type="file" id="hotelExcelLoadInput" accept=".xlsx, .csv" style="display: none;">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    
     <script src="script.js"></script>
 </body>
 </html>
