--- a/manual/index.html
+++ b/manual/index.html
@@ -77,13 +77,8 @@
 <body>
 
     <div class="container">
-        <h1>호텔 카드 메이커: 쉬운 사용 설명서</h1>
+        <h1>호텔 카드 메이커 사용 메뉴얼</h1>
         
-        <section id="intro">
-            <h2>이 프로그램은 무엇인가요?</h2>
-            <p>이메일이나 웹페이지에 사용할 수 있는 깔끔한 호텔 안내 카드를 쉽고 빠르게 만드는 도구입니다.</p>
-        </section>
-
         <section id="getting-started">
             <h2>시작하기: 3단계로 카드 만들기</h2>
             <ol>
