--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="editor-controls">
             <h2><b>호텔카드 메이커</b></h2>
             <div class="control-buttons flex flex-wrap gap-2 justify-end">
+                <button id="manualBtn" class="btn-manual"><i class="fas fa-book-open"></i>사용 메뉴얼</button>
                 <button id="copyHtmlBtn" class="btn-copy-html"><i class="fas fa-copy"></i>코드 복사</button>
                 <button id="savePreviewHtmlBtn" class="btn-save-preview-html"><i class="fas fa-file-alt"></i>HTML 저장</button>
                 <button id="previewHotelBtn" class="btn-preview"><i class="fas fa-eye"></i>미리보기</button>
