--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="editor-container">
         <div class="editor-controls">
-            <h2><b>호텔카드 메이커</b></h2>
+            <h2><b>인보이스용 호텔카드 메이커</b></h2>
             <div class="control-buttons flex flex-wrap gap-2 justify-end">
                 <button id="manualBtn" class="btn-manual"><i class="fas fa-book-open"></i>사용 메뉴얼</button>
                 <button id="copyHtmlBtn" class="btn-copy-html"><i class="fas fa-copy"></i>코드 복사</button>
