--- a/manual/index.html
+++ b/manual/index.html
@@ -142,6 +142,9 @@
                 <br>
                 <dt><strong>Q. <code>미리보기</code>를 눌렀는데 아무 반응이 없어요.</strong></dt>
                 <dd>A. 인터넷 브라우저가 팝업 창을 차단했을 가능성이 높습니다. 주소창 주변에 나타나는 팝업 차단 알림을 확인하고 '팝업 허용'을 선택해 주세요.</dd>
+                <br>
+                <dt><strong>Q. 호텔 정보 없이 이미지만 크게 표시하고 싶어요.</strong></dt>
+                <dd>A. '대표 이미지 URL' 칸에 이미지 주소만 입력하고, 호텔명, 웹사이트, 간단 설명 등 나머지 칸은 모두 비워두세요. 그러면 자동으로 너비 640px의 큰 이미지만 표시되는 카드가 만들어집니다.</dd>
             </dl>
         </section>
     </div>
