--- a/manual/index.html
+++ b/manual/index.html
@@ -80,12 +80,10 @@
         <h1>호텔 카드 메이커 사용 메뉴얼</h1>
         
         <section id="getting-started">
-            <h2>시작하기: 3단계로 카드 만들기</h2>
+            <h2>시작하기: 바로 카드 만들기</h2>
             <ol>
-                <li><strong>새 카드 추가하기</strong><br>
-                    <code>+ 새 호텔 추가</code> 버튼을 누르면, '새 호텔 1'이라는 이름의 탭이 새로 생깁니다.</li>
-                <li><strong>호텔 정보 입력하기</strong><br>
-                    새로 생긴 탭이 선택된 상태에서, 아래쪽에 있는 빈칸에 호텔 정보를 채워 넣으세요.
+                <li><strong>기본 카드에 정보 입력하기</strong><br>
+                    페이지를 열면 기본적으로 '새 호텔 1'이라는 이름의 호텔 카드와 함께 정보 입력 칸이 활성화되어 있습니다. 바로 이곳에 첫 번째 호텔 정보를 입력하세요.
                     <ul>
                         <li><strong>호텔명 (한글/영문)</strong>: 호텔의 한글, 영문 이름을 적습니다.</li>
                         <li><strong>호텔 웹사이트</strong>: 호텔 홈페이지 주소를 넣으면, 카드에 '웹사이트 바로가기' 버튼이 생깁니다.</li>
@@ -93,9 +91,45 @@
                         <li><strong>간단 설명</strong>: 호텔의 특징을 한 줄씩 입력하세요. 한 줄 쓰고 엔터(Enter)를 치면, 나중에 자동으로 보기 좋은 목록으로 만들어 줍니다.</li>
                     </ul>
                 </li>
+                <li><strong>새 카드 추가하기 (필요한 경우)</strong><br>
+                    다른 호텔 정보를 추가하고 싶다면, 상단의 <code>+ 새 호텔 추가</code> 버튼을 누르세요. 새로운 호텔 탭이 생기고 해당 호텔 정보를 입력할 수 있습니다.</li>
                 <li><strong>미리보기로 확인하기</strong><br>
                     오른쪽 위에 있는 <code>미리보기</code> 버튼을 누르면, 실제 카드가 어떻게 보이는지 새 창에서 바로 확인할 수 있습니다. 여러 호텔을 만들었다면 슬라이드 형태로 나타납니다.</li>
             </ol>
+        </section>
+
+        <section id="batch-import">
+            <h2>엑셀 데이터 일괄 입력 (복사 & 붙여넣기)</h2>
+            <p>엑셀이나 표 형식으로 정리된 여러 호텔 정보를 한 번에 가져올 수 있는 편리한 기능입니다.</p>
+            <ol>
+                <li><strong>엑셀 데이터 준비하기</strong><br>
+                    다음 순서대로 열(Column)에 맞춰 호텔 정보를 입력합니다. (첫 행은 머리글이 아닌 실제 데이터부터 시작해야 합니다.)
+                    <ul>
+                        <li>A열: 호텔명 (한글)</li>
+                        <li>B열: 호텔명 (영문)</li>
+                        <li>C열: 호텔 웹사이트 (예: https://www.example.com)</li>
+                        <li>D열: 대표 이미지 URL (예: https://www.example.com/image.jpg)</li>
+                        <li>E열: 간단 설명 (셀 내에서 줄바꿈하여 여러 줄 입력 가능)</li>
+                    </ul>
+                    <div class="note">
+                        <strong>주의:</strong> 열의 순서가 정확해야 합니다. 정보가 없는 칸(셀)도 비워둔 채로 그대로 복사해야 형식에 맞게 입력됩니다.
+                    </div>
+                </li>
+                <li><strong>데이터 복사하기</strong><br>
+                    엑셀 프로그램에서 입력한 호텔 정보 범위(셀들)를 선택하고 복사합니다 (단축키: Ctrl+C 또는 Cmd+C).
+                </li>
+                <li><strong>에디터에 붙여넣기</strong><br>
+                    호텔 카드 메이커 웹페이지로 돌아와서, 호텔 정보 입력 영역 (예: 호텔명 입력칸, 설명 입력칸 등 어떤 칸이든 또는 그 주변 빈 공간)에 붙여넣기 합니다 (단축키: Ctrl+V 또는 Cmd+V).
+                </li>
+                <li><strong>확인 및 가져오기</strong><br>
+                    "엑셀/표 형식의 데이터를 붙여넣어 호텔 정보를 처리하시겠습니까?" 라는 확인 대화상자가 나타납니다. "확인" 버튼을 누르면 데이터가 처리됩니다.
+                    <ul>
+                        <li><strong>현재 선택(활성화)된 호텔 탭이 있는 경우:</strong> 복사한 엑셀 데이터의 첫 번째 줄 내용이 현재 선택된 호텔의 정보를 덮어씁니다. 엑셀 데이터에 두 번째 줄부터 내용이 더 있다면, 그 내용들은 현재 선택된 호텔 바로 다음에 새로운 호텔 탭으로 순차적으로 추가(삽입)됩니다.</li>
+                        <li><strong>현재 선택(활성화)된 호텔 탭이 없는 경우 (예: 모든 호텔을 삭제한 상태):</strong> 복사한 엑셀 데이터의 모든 내용이 새로운 호텔 탭으로 추가됩니다.</li>
+                    </ul>
+                </li>
+            </ol>
+            <p>데이터 처리 후에는 작업한 내용이 반영된 호텔 탭으로 자동 이동하여 결과를 바로 확인할 수 있습니다.</p>
         </section>
 
         <section id="usage">
@@ -105,7 +139,7 @@
             <h3>방법 1: 견적 메일(인보이스)에 바로 붙여넣고 싶을 때</h3>
             <ol>
                 <li>견적서에 추가하려는 호텔의 탭을 클릭해서 선택하세요.</li>
-                <li><code>코드 복사</code> 버튼을 누릅니다.</li>
+                <li><code>코드 복사</code> 버튼을 누릅니다. 선택된 호텔 카드 하나에 대한 HTML 코드가 복사됩니다.</li>
                 <li>견적 메일 보내기 화면으로 이동하여, 입력창의 편집기(Editor) 모드를 <strong>'HTML'로 변경</strong>합니다.</li>
                 <li>HTML 모드로 바뀐 입력창에 복사된 코드를 <strong>붙여넣기(Ctrl+V)</strong> 하면 카드가 나타납니다.</li>
             </ol>
@@ -123,9 +157,9 @@
             <h2>작업 내용을 저장하고 다음에 이어서 하려면?</h2>
             <ul>
                 <li><strong>작업 내용 저장하기:</strong> <code>데이터 저장</code><br>
-                    지금까지 작업한 모든 내용을 '편집용 백업 파일'로 저장합니다. 나중에 이어서 수정하고 싶을 때 사용하세요.</li>
+                    지금까지 작업한 모든 내용을 호텔 각각 '편집용 백업 파일'로 저장합니다. 나중에 이어서 수정하고 싶을 때 사용하세요. 각 호텔 정보가 개별 HTML 파일 내에 JSON 형식으로 저장됩니다.</li>
                 <li><strong>저장한 내용 불러오기:</strong> <code>데이터 불러오기</code><br>
-                    전에 <code>데이터 저장</code>으로 만들어 둔 '편집용 백업 파일'을 선택하면, 작업했던 내용이 화면에 그대로 복원됩니다.</li>
+                    전에 <code>데이터 저장</code>으로 만들어 둔 '편집용 백업 파일'을 선택하면, 해당 파일에 담긴 호텔 정보가 현재 작업 목록에 추가되어 복원됩니다.</li>
             </ul>
             <div class="note">
                 <strong>주의!</strong><br>
@@ -137,8 +171,8 @@
         <section id="faq">
             <h2>자주 묻는 질문 (FAQ)</h2>
             <dl>
-                <dt><strong>Q. 왜 정보 입력 칸이 회색이고 글자가 안 써지나요?</strong></dt>
-                <dd>A. <code>+ 새 호텔 추가</code> 버튼을 눌러 새 카드를 만들거나, 기존에 만들어둔 호텔 탭 중 하나를 먼저 클릭해야 정보 입력 칸이 활성화됩니다.</dd>
+                <dt><strong>Q. 정보 입력 칸이 비활성화되는 경우는 언제인가요?</strong></dt>
+                <dd>A. 호텔 목록에 호텔이 하나도 없을 때 (예: 모든 호텔 탭을 삭제한 경우) 정보 입력 칸이 비활성화됩니다. <code>+ 새 호텔 추가</code> 버튼을 눌러 새 카드를 만들거나, 엑셀 데이터 붙여넣기로 호텔 정보를 추가하면 다시 활성화됩니다.</dd>
                 <br>
                 <dt><strong>Q. <code>미리보기</code>를 눌렀는데 아무 반응이 없어요.</strong></dt>
                 <dd>A. 인터넷 브라우저가 팝업 창을 차단했을 가능성이 높습니다. 주소창 주변에 나타나는 팝업 차단 알림을 확인하고 '팝업 허용'을 선택해 주세요.</dd>
