--- a/manual/index.html
+++ b/manual/index.html
@@ -56,13 +56,23 @@
             margin-bottom: 0.75rem;
         }
         .note {
+            background-color: #e7f3fe; /* Light blue for info */
+            border-left: 5px solid #2196f3; /* Blue accent */
+            padding: 1rem;
+            margin-top: 1rem;
+            border-radius: 0.25rem;
+        }
+        .note strong {
+            color: #177fcd;
+        }
+        .warning-note { /* For warnings */
             background-color: #fff3cd;
             border-left: 5px solid #ffc107;
             padding: 1rem;
             margin-top: 1rem;
             border-radius: 0.25rem;
         }
-        .note strong {
+        .warning-note strong {
             color: #856404;
         }
         .guide-image {
@@ -77,7 +87,7 @@
 <body>
 
     <div class="container">
-        <h1>호텔 카드 메이커 사용 메뉴얼</h1>
+        <h1>호텔 카드 메이커 사용 설명서</h1>
         
         <section id="getting-started">
             <h2>시작하기: 바로 카드 만들기</h2>
@@ -111,7 +121,7 @@
                         <li>D열: 대표 이미지 URL (예: https://www.example.com/image.jpg)</li>
                         <li>E열: 간단 설명 (셀 내에서 줄바꿈하여 여러 줄 입력 가능)</li>
                     </ul>
-                    <div class="note">
+                    <div class="warning-note">
                         <strong>주의:</strong> 열의 순서가 정확해야 합니다. 정보가 없는 칸(셀)도 비워둔 채로 그대로 복사해야 형식에 맞게 입력됩니다.
                     </div>
                 </li>
@@ -127,6 +137,9 @@
                         <li><strong>현재 선택(활성화)된 호텔 탭이 있는 경우:</strong> 복사한 엑셀 데이터의 첫 번째 줄 내용이 현재 선택된 호텔의 정보를 덮어씁니다. 엑셀 데이터에 두 번째 줄부터 내용이 더 있다면, 그 내용들은 현재 선택된 호텔 바로 다음에 새로운 호텔 탭으로 순차적으로 추가(삽입)됩니다.</li>
                         <li><strong>현재 선택(활성화)된 호텔 탭이 없는 경우 (예: 모든 호텔을 삭제한 상태):</strong> 복사한 엑셀 데이터의 모든 내용이 새로운 호텔 탭으로 추가됩니다.</li>
                     </ul>
+                     <div class="note">
+                        <strong>참고:</strong> 엑셀 붙여넣기 기능은 현재 편집 중인 목록에만 적용됩니다. 변경 내용을 클라우드에 영구적으로 저장하려면 <code>저장</code> 또는 <code>다른 이름으로 저장</code> 버튼을 이용해야 합니다.
+                    </div>
                 </li>
             </ol>
             <p>데이터 처리 후에는 작업한 내용이 반영된 호텔 탭으로 자동 이동하여 결과를 바로 확인할 수 있습니다.</p>
@@ -134,9 +147,8 @@
 
         <section id="usage">
             <h2>만든 카드는 어떻게 사용하나요?</h2>
-            <p>목적에 따라 두 가지 방법으로 카드를 활용할 수 있습니다.</p>
-
-            <h3>방법 1: 견적 메일(인보이스)에 바로 붙여넣고 싶을 때</h3>
+            
+            <h3>방법 1: 견적 메일(인보이스)에 호텔 카드 부분만 붙여넣기</h3>
             <ol>
                 <li>견적서에 추가하려는 호텔의 탭을 클릭해서 선택하세요.</li>
                 <li><code>코드 복사</code> 버튼을 누릅니다. 선택된 호텔 카드 하나에 대한 HTML 코드가 복사됩니다.</li>
@@ -145,26 +157,41 @@
             </ol>
             <img src="https://www.naeiltour.co.kr/images/web/220529.png" alt="내일투어 안내 이미지" class="guide-image">
 
-            <h3>방법 2: 안내문 파일로 전달하고 싶을 때</h3>
+            <h3>방법 2: 전체 호텔 목록을 미리보기 및 공유 (로컬 HTML 저장)</h3>
+             <p>현재 작업 중인 모든 호텔 카드를 포함하는 단일 HTML 파일을 로컬에 저장하여 미리보거나 다른 사람에게 전달할 수 있습니다. 이 파일은 웹 브라우저에서 열립니다.</p>
             <ol>
-                <li><code>HTML 저장</code> 버튼을 누르세요.</li>
-                <li>지금까지 만들었던 모든 호텔 카드가 각각 하나의 <strong>웹페이지 파일(.html)로</strong> 컴퓨터에 저장됩니다.</li>
-                <li>이 파일을 다른 사람에게 보내면, 파일을 열어 호텔 안내 카드를 확인할 수 있습니다.</li>
+                <li>오른쪽 상단의 <code>미리보기</code> 버튼을 클릭합니다.</li>
+                <li>새 창이나 탭에서 모든 호텔 카드가 포함된 미리보기 페이지가 열립니다.</li>
+                <li>이 미리보기 페이지 자체를 웹 브라우저의 "다른 이름으로 페이지 저장" (Ctrl+S 또는 Cmd+S) 기능을 사용하여 로컬 컴퓨터에 HTML 파일로 저장할 수 있습니다.</li>
+                <li>저장된 HTML 파일을 다른 사람에게 전달하면, 해당 파일을 웹 브라우저에서 열어 호텔 정보를 확인할 수 있습니다.</li>
             </ol>
+            <div class="note">
+                <strong>참고:</strong> 이 방법은 현재 화면에 보이는 내용을 그대로 저장하는 방식입니다. Firebase에 저장된 데이터와는 별개이며, 편집용으로 다시 불러올 수는 없습니다.
+            </div>
         </section>
 
-        <section id="save-load">
-            <h2>작업 내용을 저장하고 다음에 이어서 하려면?</h2>
+        <section id="save-load-firebase">
+            <h2>작업 내용 클라우드에 저장하고 불러오기 (Firebase 연동)</h2>
+            <p>호텔 카드 메이커는 작업 내용을 Firebase 클라우드 데이터베이스에 안전하게 저장하고, 언제든지 다시 불러와 이어서 작업할 수 있는 기능을 제공합니다.</p>
             <ul>
-                <li><strong>작업 내용 저장하기:</strong> <code>데이터 저장</code><br>
-                    지금까지 작업한 모든 내용을 호텔 각각 '편집용 백업 파일'로 저장합니다. 나중에 이어서 수정하고 싶을 때 사용하세요. 각 호텔 정보가 개별 HTML 파일 내에 JSON 형식으로 저장됩니다.</li>
-                <li><strong>저장한 내용 불러오기:</strong> <code>데이터 불러오기</code><br>
-                    전에 <code>데이터 저장</code>으로 만들어 둔 '편집용 백업 파일'을 선택하면, 해당 파일에 담긴 호텔 정보가 현재 작업 목록에 추가되어 복원됩니다.</li>
+                <li><strong>새 이름으로 클라우드에 저장:</strong> <code>다른 이름으로 저장</code> 버튼<br>
+                    현재 작업 중인 모든 호텔 카드 정보(전체 세트)를 Firebase 클라우드에 새로운 이름으로 저장합니다. 처음 저장하거나, 기존 작업 내용의 다른 버전을 만들고 싶을 때 사용합니다. 저장할 이름을 입력하라는 창이 나타납니다. 현재 활성화된 탭의 호텔 이름이 기본으로 제안됩니다.
+                </li>
+                <li><strong>클라우드에 덮어쓰기 저장:</strong> <code>저장</code> 버튼<br>
+                    이전에 <code>다른 이름으로 저장</code> 했거나 <code>불러오기</code>를 통해 작업 중인 호텔 정보 세트가 있다면, 현재 변경 사항을 해당 클라우드 문서에 덮어쓰기 저장합니다. 만약 현재 작업이 클라우드의 특정 문서와 연결되어 있지 않다면 (예: 프로그램을 처음 시작했거나, 로컬에서만 작업한 경우), 먼저 <code>다른 이름으로 저장</code>을 하도록 안내합니다.
+                </li>
+                <li><strong>클라우드에서 불러오기:</strong> <code>불러오기</code> 버튼<br>
+                    클릭하면 Firebase에 저장된 호텔 정보 세트들의 목록이 나타나는 창이 열립니다.
+                    <ul>
+                        <li><strong>검색:</strong> 목록 상단의 검색창을 이용해 원하는 정보 세트를 빠르게 찾을 수 있습니다.</li>
+                        <li><strong>불러오기 (클릭):</strong> 목록에서 원하는 항목을 한 번 클릭하면, 해당 호텔 정보 세트가 현재 작업 중인 호텔 목록의 뒤에 새 탭들로 추가(누적)됩니다.</li>
+                        <li><strong>이름 수정 (더블클릭):</strong> 목록에서 항목을 더블클릭하면 해당 정보 세트의 저장된 이름을 변경할 수 있습니다. 이름 수정 후에는 데이터가 자동으로 로드되지 않습니다.</li>
+                        <li><strong>삭제:</strong> 각 항목 옆의 삭제 아이콘(휴지통 모양)을 클릭하여 해당 정보 세트를 클라우드에서 영구적으로 삭제할 수 있습니다. (주의: 삭제된 데이터는 복구할 수 없습니다.)</li>
+                    </ul>
+                </li>
             </ul>
             <div class="note">
-                <strong>주의!</strong><br>
-                <code>HTML 저장</code>은 다른 사람에게 보여줄 **완성된 결과물**을 만드는 기능이고,<br>
-                <code>데이터 저장</code>은 나중에 내가 다시 수정하기 위한 **작업 과정**을 백업하는 기능입니다.
+                <strong>중요:</strong> 이제 작업 내용은 로컬 파일이 아닌 Firebase 클라우드 데이터베이스를 통해 관리됩니다. 정기적으로 <code>저장</code> 또는 <code>다른 이름으로 저장</code> 버튼을 사용하여 작업 내용을 클라우드에 백업하는 것이 좋습니다.
             </div>
         </section>
 
