--- a/manual/index.html
+++ b/manual/index.html
@@ -92,8 +92,8 @@
         <section id="getting-started">
             <h2>시작하기: 바로 카드 만들기</h2>
             <ol>
-                <li><strong>기본 카드에 정보 입력하기</strong><br>
-                    페이지를 열면 기본적으로 '새 호텔 1'이라는 이름의 호텔 카드와 함께 정보 입력 칸이 활성화되어 있습니다. 바로 이곳에 첫 번째 호텔 정보를 입력하세요.
+                <li><strong>새 호텔 카드 추가 및 정보 입력하기</strong><br>
+                    페이지를 열면, 처음에는 비어있는 상태로 시작됩니다. 상단의 <code>+ 새 호텔 추가</code> 버튼을 눌러 첫 번째 호텔 탭을 만드세요. 그러면 '새 호텔 1'과 같은 이름으로 호텔 탭이 생성되고 정보 입력 칸이 활성화됩니다. 이곳에 첫 번째 호텔 정보를 입력하세요.
                     <ul>
                         <li><strong>호텔명 (한글/영문)</strong>: 호텔의 한글, 영문 이름을 적습니다.</li>
                         <li><strong>호텔 웹사이트</strong>: 호텔 홈페이지 주소를 넣으면, 카드에 '웹사이트 바로가기' 버튼이 생깁니다.</li>
@@ -175,7 +175,7 @@
             <p>호텔 카드 메이커는 작업 내용을 Firebase 클라우드 데이터베이스에 안전하게 저장하고, 언제든지 다시 불러와 이어서 작업할 수 있는 기능을 제공합니다.</p>
             <ul>
                 <li><strong>새 이름으로 클라우드에 저장:</strong> <code>다른 이름으로 저장</code> 버튼<br>
-                    현재 작업 중인 모든 호텔 카드 정보(전체 세트)를 Firebase 클라우드에 새로운 이름으로 저장합니다. 처음 저장하거나, 기존 작업 내용의 다른 버전을 만들고 싶을 때 사용합니다. 저장할 이름을 입력하라는 창이 나타납니다. 현재 활성화된 탭의 호텔 이름이 기본으로 제안됩니다.
+                    현재 작업 중인 모든 호텔 카드 정보(전체 세트)를 Firebase 클라우드에 새로운 이름으로 저장합니다. 처음 저장하거나, 기존 작업 내용의 다른 버전을 만들고 싶을 때 사용합니다. 저장할 이름을 입력하라는 창이 나타납니다. 현재 활성화된 탭의 호텔 이름이 기본으로 제안될 수 있습니다. (예: 현재 문서명이 "새 호텔 정보 모음"이 아니면 그 이름을, 그렇지 않으면 현재 선택된 호텔 또는 첫 번째 호텔의 한글 이름)
                 </li>
                 <li><strong>클라우드에 덮어쓰기 저장:</strong> <code>저장</code> 버튼<br>
                     이전에 <code>다른 이름으로 저장</code> 했거나 <code>불러오기</code>를 통해 작업 중인 호텔 정보 세트가 있다면, 현재 변경 사항을 해당 클라우드 문서에 덮어쓰기 저장합니다. 만약 현재 작업이 클라우드의 특정 문서와 연결되어 있지 않다면 (예: 프로그램을 처음 시작했거나, 로컬에서만 작업한 경우), 먼저 <code>다른 이름으로 저장</code>을 하도록 안내합니다.
@@ -184,9 +184,13 @@
                     클릭하면 Firebase에 저장된 호텔 정보 세트들의 목록이 나타나는 창이 열립니다.
                     <ul>
                         <li><strong>검색:</strong> 목록 상단의 검색창을 이용해 원하는 정보 세트를 빠르게 찾을 수 있습니다.</li>
-                        <li><strong>불러오기 (클릭):</strong> 목록에서 원하는 항목을 한 번 클릭하면, 해당 호텔 정보 세트가 현재 작업 중인 호텔 목록의 뒤에 새 탭들로 추가(누적)됩니다.</li>
-                        <li><strong>이름 수정 (더블클릭):</strong> 목록에서 항목을 더블클릭하면 해당 정보 세트의 저장된 이름을 변경할 수 있습니다. 이름 수정 후에는 데이터가 자동으로 로드되지 않습니다.</li>
-                        <li><strong>삭제:</strong> 각 항목 옆의 삭제 아이콘(휴지통 모양)을 클릭하여 해당 정보 세트를 클라우드에서 영구적으로 삭제할 수 있습니다. (주의: 삭제된 데이터는 복구할 수 없습니다.)</li>
+                        <li><strong>불러오기 (클릭):</strong> 목록에서 원하는 항목을 한 번 클릭하면, 해당 호텔 정보 세트가 현재 작업 중인 호텔 목록의 <strong>뒤에 새 탭들로 추가(누적)</strong>됩니다.</li>
+                        <li><strong>이름 수정 (더블클릭):</strong> 목록에서 항목을 더블클릭하면 해당 정보 세트의 저장된 이름을 변경할 수 있습니다. 이름 수정 후에는 데이터가 자동으로 로드되지 않으므로, 필요시 다시 클릭하여 불러올 수 있습니다.</li>
+                        <li><strong>삭제:</strong> 각 항목 옆의 삭제 아이콘(휴지통 모양)을 클릭하여 해당 정보 세트를 클라우드에서 영구적으로 삭제할 수 있습니다.
+                            <div class="warning-note" style="margin-top: 0.5rem; padding: 0.5rem;">
+                                <strong>주의:</strong> 삭제된 데이터는 복구할 수 없습니다. 만약 현재 작업 중인 정보 세트를 클라우드에서 삭제하면, 편집기의 내용은 초기화되며 '새 호텔 정보 모음' 상태로 돌아갑니다. (로컬 편집 내용도 사라집니다)
+                            </div>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -199,7 +203,7 @@
             <h2>자주 묻는 질문 (FAQ)</h2>
             <dl>
                 <dt><strong>Q. 정보 입력 칸이 비활성화되는 경우는 언제인가요?</strong></dt>
-                <dd>A. 호텔 목록에 호텔이 하나도 없을 때 (예: 모든 호텔 탭을 삭제한 경우) 정보 입력 칸이 비활성화됩니다. <code>+ 새 호텔 추가</code> 버튼을 눌러 새 카드를 만들거나, 엑셀 데이터 붙여넣기로 호텔 정보를 추가하면 다시 활성화됩니다.</dd>
+                <dd>A. 호텔 목록에 호텔이 하나도 없을 때 (예: 모든 호텔 탭을 삭제했거나, 프로그램을 처음 시작했을 때) 정보 입력 칸이 비활성화됩니다. <code>+ 새 호텔 추가</code> 버튼을 눌러 새 카드를 만들거나, 엑셀 데이터 붙여넣기로 호텔 정보를 추가하면 다시 활성화됩니다.</dd>
                 <br>
                 <dt><strong>Q. <code>미리보기</code>를 눌렀는데 아무 반응이 없어요.</strong></dt>
                 <dd>A. 인터넷 브라우저가 팝업 창을 차단했을 가능성이 높습니다. 주소창 주변에 나타나는 팝업 차단 알림을 확인하고 '팝업 허용'을 선택해 주세요.</dd>
